cert-manager/limit-dnsnames/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: limit_dnsnames
policies:
- ../limit-dnsnames.yaml
resources:
- resource.yaml
results:
- kind: Certificate
  policy: cert-manager-limit-dnsnames
  resources:
  - letsencrypt-crt
  result: fail
  rule: limit-dnsnames
- kind: Certificate
  policy: cert-manager-limit-dnsnames
  resources:
  - acme-crt
  result: pass
  rule: limit-dnsnames
